# android-jsc

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sanyinchen/android_jsc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sanyinchen/android_jsc/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sanyinchen/android_jsc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jsc/: CMakeLists.txt  build.gradle
jsc/src/androidTest/java/com/sanyinchen/jsc/: ExampleInstrumentedTest.kt
jsc/src/main/: AndroidManifest.xml
jsc/src/main/cpp/bridge/: CMakeLists.txt  bridge.cpp
jsc/src/main/cpp/jsc/: CMakeLists.txt
jsc/src/main/cpp/jsc/JavaScriptCore/: JSStringRefCF.h
jsc/src/main/java/com/sanyinchen/jsc/: Bridge.java
jsc/src/main/res/values/: strings.xml
jsc/src/test/java/com/sanyinchen/jsc/: ExampleUnitTest.kt
